# ImageTool

./: CMakeLists.txt  Screen01.qml  colorimageprovider.cpp  colorimageprovider.h  imageprocess.cpp  imageprocess.h  main.cpp  main.qml  manager.cpp  manager.h  qtquickcontrols2.conf
